syntax = "proto3";
package erda.cmp.alert;
option go_package = "github.com/erda-project/erda-proto-go/cmp/alert/pb";

import "core/monitor/alert/alert.proto";
import "common/openapi.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

service AlertService {
  option (erda.common.openapi_service) = {
    service: "cmp",
    auth: {
      check_login: true,
      check_token: true,
    }
  };

  rpc GetAlertConditions (GetAlertConditionsRequest) returns (GetAlertConditionsResponse) {
    option (google.api.http)     = {
      get: "/api/cmp/alerts/conditions"
    };
    option (erda.common.openapi) = {
      path: "/api/cmp/alerts/conditions"
    };
  }
  rpc GetAlertConditionsValue (GetAlertConditionsValueRequest) returns (GetAlertConditionsValueResponse) {
    option (google.api.http)     = {
      get: "/api/cmp/alerts/conditions/value"
    };
    option (erda.common.openapi) = {
      path: "/api/cmp/alerts/conditions/value"
    };
  }
}

message GetAlertConditionsRequest {
  string scopeType = 1;
}

message GetAlertConditionsResponse {
  repeated erda.core.monitor.alert.Conditions data = 1 [json_name = "conditions"];
}

message GetAlertConditionsValueRequest {
  string projectId   = 1;
  string terminusKey = 2;
  string scopeType   = 3;
}

message GetAlertConditionsValueResponse {
  repeated erda.core.monitor.alert.AlertConditionsValue data = 1;
}
